@@ -76,6 +76,6 @@ html: $(DOCUMENTATION)
 	cp doc/prettyprint.js doc/$(PACKAGE)
 	(cd doc && zip -q -r ../archive/$(PACKAGE)-$(VERSION)-docs.zip $(PACKAGE))
 
-clean:
-	-rm $(CLEANFILES)
-	-rm -Rf $(PACKAGE)-$(VERSION)
+doc-clean:
+	-rm $(DOC_CLEANFILES)
+
